# dagmc-basics

./: CMakeLists.txt  Dockerfile  README.md  torus.h5m
src/: CMakeLists.txt  dagmc_basics.cpp
